# gossip

./: .gitignore  CMakeLists.txt  README.md  index.html  install_dep_local.sh  license_header.txt  py_bindings.cc  pyproject.toml  setup.py
.github/workflows/: building.yaml
example/cpp/: gossip_client_example.cc  gossip_entry_server_example.cc
example/python/: gossip_client_example.py  gossip_entry_server_example.py  simulation_example.ipynb
include/: client.h  gossip.h  node_descriptor.h  peer_sampling_service.h  server.h  ts_ring_buffer.h  view.h  view_proto_helper.h
old_pip_build/: MANIFEST.in  setup.py
proto/: gossip.proto
src/: client.cc  node_descriptor.cc  peer_sampling_service.cc  server.cc  view.cc
test/: CMakeLists.txt  client_server_ut.cc  node_descriptor_ut.cc  peer_sampling_service_ut.cc  test_main.cc  view_proto_helper_ut.cc  view_ut.cc
